[package]
name = "fuckvanguard-vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = { version = "0.12.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
console = "0.15.8"
displaydoc = "0.2.4"
fern = { version = "0.6.2", features = ["colored"] }
goblin = "0.8.0"
humantime = "2.1.0"
kvm-bindings = { version = "0.7.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.16.0"
libc = "0.2.153"
log = "0.4.20"
serialport = "4.3.0"
thiserror = "1.0.57"
virtio-queue = "0.11.0"
vm-memory = { version = "0.14.0", features = ["vmm-sys-util", "backend-mmap"] }
vmm-sys-util = "0.12.1"
